--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.395.0",
+		"@aws-sdk/s3-request-presigner": "^3.395.0",
 		"@supabase/auth-helpers-sveltekit": "^0.10.2",
 		"@supabase/auth-ui-shared": "^0.1.6",
 		"@supabase/auth-ui-svelte": "^0.2.2",
